[gd_scene load_steps=62 format=3 uid="uid://8j8rig5byl5c"]

[ext_resource type="Script" path="res://player.gd" id="1_dc2h0"]
[ext_resource type="Texture2D" uid="uid://jwg1sil43vxu" path="res://Assets/Cat 50 Animations/Cat-Sheet.png" id="2_5fk76"]
[ext_resource type="Texture2D" uid="uid://ktnbk047xeeo" path="res://Assets/coin3_16x16.png" id="3_e05uk"]
[ext_resource type="LabelSettings" uid="uid://c2d77jfyrhm88" path="res://GUI/GUITExt.tres" id="3_hupva"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tpoa7"]
atlas = ExtResource("2_5fk76")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhyil"]
atlas = ExtResource("2_5fk76")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1o2f"]
atlas = ExtResource("2_5fk76")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uak14"]
atlas = ExtResource("2_5fk76")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4bt5"]
atlas = ExtResource("2_5fk76")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnqa5"]
atlas = ExtResource("2_5fk76")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ixdr"]
atlas = ExtResource("2_5fk76")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p2ai"]
atlas = ExtResource("2_5fk76")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs4c3"]
atlas = ExtResource("2_5fk76")
region = Rect2(224, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe4d4"]
atlas = ExtResource("2_5fk76")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bbmq"]
atlas = ExtResource("2_5fk76")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prhdr"]
atlas = ExtResource("2_5fk76")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdro1"]
atlas = ExtResource("2_5fk76")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyvsg"]
atlas = ExtResource("2_5fk76")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmq42"]
atlas = ExtResource("2_5fk76")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jdac"]
atlas = ExtResource("2_5fk76")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bpng"]
atlas = ExtResource("2_5fk76")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlrh5"]
atlas = ExtResource("2_5fk76")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcsry"]
atlas = ExtResource("2_5fk76")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry0s5"]
atlas = ExtResource("2_5fk76")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyo3e"]
atlas = ExtResource("2_5fk76")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1hxn"]
atlas = ExtResource("2_5fk76")
region = Rect2(0, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx3kk"]
atlas = ExtResource("2_5fk76")
region = Rect2(32, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8yb6"]
atlas = ExtResource("2_5fk76")
region = Rect2(64, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5a4b"]
atlas = ExtResource("2_5fk76")
region = Rect2(96, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jj2g"]
atlas = ExtResource("2_5fk76")
region = Rect2(128, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3i4d"]
atlas = ExtResource("2_5fk76")
region = Rect2(160, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j535e"]
atlas = ExtResource("2_5fk76")
region = Rect2(192, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt02l"]
atlas = ExtResource("2_5fk76")
region = Rect2(224, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvxlm"]
atlas = ExtResource("2_5fk76")
region = Rect2(32, 608, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwkeh"]
atlas = ExtResource("2_5fk76")
region = Rect2(64, 608, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_imjya"]
atlas = ExtResource("2_5fk76")
region = Rect2(96, 608, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlrnh"]
atlas = ExtResource("2_5fk76")
region = Rect2(0, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf1un"]
atlas = ExtResource("2_5fk76")
region = Rect2(32, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8ytf"]
atlas = ExtResource("2_5fk76")
region = Rect2(64, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn017"]
atlas = ExtResource("2_5fk76")
region = Rect2(96, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ino2t"]
atlas = ExtResource("2_5fk76")
region = Rect2(32, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_duhvh"]
atlas = ExtResource("2_5fk76")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yarqi"]
atlas = ExtResource("2_5fk76")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl78o"]
atlas = ExtResource("2_5fk76")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1mf5"]
atlas = ExtResource("2_5fk76")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm0dt"]
atlas = ExtResource("2_5fk76")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qni7"]
atlas = ExtResource("2_5fk76")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_embqn"]
atlas = ExtResource("2_5fk76")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mc7u"]
atlas = ExtResource("2_5fk76")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_raqql"]
atlas = ExtResource("2_5fk76")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7q61t"]
atlas = ExtResource("2_5fk76")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kehsl"]
atlas = ExtResource("2_5fk76")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1a6u"]
atlas = ExtResource("2_5fk76")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dyvv"]
atlas = ExtResource("2_5fk76")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypor1"]
atlas = ExtResource("2_5fk76")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e5hv"]
atlas = ExtResource("2_5fk76")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awt4w"]
atlas = ExtResource("2_5fk76")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4hrl2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpoa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhyil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1o2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uak14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4bt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnqa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ixdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p2ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs4c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe4d4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bbmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prhdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdro1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyvsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmq42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jdac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bpng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlrh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcsry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry0s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyo3e")
}],
"loop": true,
"name": &"Movimiento",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_b1hxn")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_gx3kk")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_c8yb6")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_w5a4b")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_1jj2g")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_j3i4d")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_j535e")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_vt02l")
}],
"loop": true,
"name": &"Muerte",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvxlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwkeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imjya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlrnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf1un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8ytf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn017")
}],
"loop": true,
"name": &"Salto",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ino2t")
}],
"loop": true,
"name": &"Salto_bajando",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_duhvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yarqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl78o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1mf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm0dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qni7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_embqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mc7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7q61t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kehsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1a6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dyvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypor1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e5hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awt4w")
}],
"loop": true,
"name": &"UyQuieto",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6tnnm"]
size = Vector2(11.6915, 16.5491)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bt2i0"]
bg_color = Color(0.933333, 0.941176, 0.666667, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yqds"]
bg_color = Color(0.25098, 0.552941, 0.301961, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
position = Vector2(-10, 33)
scale = Vector2(2, 1.704)
script = ExtResource("1_dc2h0")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4hrl2")
animation = &"UyQuieto"
frame_progress = 0.110343

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.36182, 7.68787)
scale = Vector2(1.00275, 1)
shape = SubResource("RectangleShape2D_6tnnm")

[node name="PlayerGUI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="PlayerGUI"]
offset_top = 14.0
offset_right = 55.0
offset_bottom = 44.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bt2i0")

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerGUI"]
offset_left = 25.0
offset_top = 10.0
offset_right = 106.0
offset_bottom = 50.0

[node name="Sprite2D" type="Sprite2D" parent="PlayerGUI/HBoxContainer"]
position = Vector2(-12, 19)
scale = Vector2(1.5, 1.491)
texture = ExtResource("3_e05uk")
hframes = 14

[node name="Label" type="Label" parent="PlayerGUI/HBoxContainer"]
texture_filter = 2
layout_mode = 2
text = ":"
label_settings = ExtResource("3_hupva")

[node name="Monedas_Label" type="Label" parent="PlayerGUI/HBoxContainer"]
texture_filter = 2
layout_mode = 2
text = "0
"
label_settings = ExtResource("3_hupva")

[node name="Panel2" type="Panel" parent="PlayerGUI"]
offset_left = 310.0
offset_top = 14.0
offset_right = 460.0
offset_bottom = 43.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3yqds")

[node name="Timer_Label" type="Label" parent="PlayerGUI/Panel2"]
texture_filter = 2
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 146.0
offset_bottom = 28.0
label_settings = ExtResource("3_hupva")
horizontal_alignment = 1
